<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:gravity="bottom"
    android:theme="@style/Base.Theme.Calculator"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expression"
        android:textColor="@color/white"
        android:textSize="65sp"
        android:fontFamily="@font/sf_pro_font"
        android:layout_gravity="end"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:fontFamily="@font/sf_pro_font"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textSize="65sp"
        android:layout_gravity="end"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="24dp"/>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginVertical="6dp"
    android:gravity="center"
    >
    <ImageButton
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:background="@android:color/transparent"
        android:layout_marginHorizontal="@dimen/items_space"
        android:id="@+id/acBtn"
        android:contentDescription="@string/ac_desc"
        android:src="@drawable/ac"/>
    <ImageButton
        android:id="@+id/toggleNegativeBtn"
        android:contentDescription="@string/toggle_pos_desc"
        android:layout_width="@dimen/btn_width"
        android:layout_marginHorizontal="@dimen/items_space"
             android:layout_height="@dimen/btn_height"

        android:background="@android:color/transparent"
        android:src="@drawable/toggle_negative"/>
    <ImageButton
        android:id="@+id/percentageBtn"
        android:contentDescription="@string/percentage_desc"
        android:layout_width="@dimen/btn_width"
        android:layout_marginHorizontal="@dimen/items_space"
        android:layout_height="@dimen/btn_height"
        android:background="@android:color/transparent"
        android:src="@drawable/percentage"/>

    <ImageButton
        android:id="@+id/dividerBtn"
        android:contentDescription="@string/divide_desc"
        android:layout_width="@dimen/btn_width"
        android:layout_marginHorizontal="@dimen/items_space"
        android:layout_height="@dimen/btn_height"
        android:background="@android:color/transparent"
        android:src="@drawable/divider"/>
</androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/items_space"
        android:gravity="center"
        >
        <ImageButton
            android:id="@+id/sevenBtn"
            android:contentDescription="@string/seven_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="@dimen/items_space"
            android:src="@drawable/seven"/>
        <ImageButton
            android:id="@+id/eightBtn"
            android:contentDescription="@string/eight_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/eight"/>
        <ImageButton
            android:id="@+id/nineBtn"
            android:contentDescription="@string/nine_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/nine"/>

        <ImageButton
            android:id="@+id/multiplyBtn"
            android:contentDescription="@string/multiply_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/multiply"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/items_space"
        android:gravity="center"
        >
        <ImageButton
            android:id="@+id/fourBtn"
            android:contentDescription="@string/four_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="@dimen/items_space"
            android:src="@drawable/four"/>
        <ImageButton
            android:id="@+id/fiveBtn"
            android:contentDescription="@string/five_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/five"/>
        <ImageButton
            android:id="@+id/sixBtn"
            android:contentDescription="@string/six_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/six"/>

        <ImageButton
            android:id="@+id/subtractionBtn"
            android:contentDescription="@string/subtraction_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/subtraction"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/items_space"
        android:gravity="center"
        >
        <ImageButton
            android:id="@+id/oneBtn"
            android:contentDescription="@string/one_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="@dimen/items_space"
            android:src="@drawable/one"/>
        <ImageButton
            android:id="@+id/twoBtn"
            android:contentDescription="@string/two_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/two"/>
        <ImageButton
            android:id="@+id/threeBtn"
            android:contentDescription="@string/three_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/three"/>

        <ImageButton
            android:id="@+id/additionBtn"
            android:contentDescription="@string/addition_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/addition"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/items_space"
        android:gravity="center"
        >

        <ImageButton
            android:id="@+id/zeroBtn"
            android:contentDescription="@string/zero_desc"
            android:layout_width="@dimen/long_btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/zero"/>
        <ImageButton
            android:id="@+id/decimalBtn"
            android:contentDescription="@string/decimal_add_desc"
            android:layout_width="@dimen/btn_width"
            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/decimal_add"/>
        <ImageButton
            android:id="@+id/equalBtn"
            android:contentDescription="@string/equal_desc"
            android:layout_width="@dimen/btn_width"

            android:layout_marginHorizontal="@dimen/items_space"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:src="@drawable/equal"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>